--- a/html/kyc_form/index.slim
+++ b/html/kyc_form/index.slim
@@ -1,32 +1,13 @@
-h5 Know Your Client (KYC) Application Form (For Individuals only)
+h5.center Know Your Client (KYC) Application Form (For Individuals only)
 .row
-  .col.m8
-    ul.collapsible.popout data-collapsible="accordion"
-      li
-        .collapsible-header
-          i.material-icons> filter_drama
-          | First
-        .collapsible-body
-          form
-            .input-field
-              input type="text"
-              label
-      li
-        .collapsible-header
-          i.material-icons> place
-          | Second
-        .collapsible-body
-          span Lorem ipsum dolor sit amet.
-      li
-        .collapsible-header
-          i.material-icons> whatshot
-          | Third
-        .collapsible-body
-          span Lorem ipsum dolor sit amet.
-  .col.m4
-    .card
-      .card-content
-        .card-title Instructions
-        |Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-javascript:
-  $('.collapsible').collapsible('open', 0);
+  .col.s12
+      h3.center
+        |Application Type
+  .col.s12.center
+    a.waves-effect.waves-light.btn-large href="/kyc-registry/new"
+      i.material-icons.left class
+      | New
+
+    a.waves-effect.waves-light.btn-large href="/kyc-registry/update"
+      i.material-icons.left create
+      | Update
