--- a/html/layout.slim
+++ b/html/layout.slim
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+doctype html
 html
   head
     meta name="viewport" content="width=device-width, initial-scale=1.0"
@@ -9,6 +9,6 @@ html
   body
     nav
       .nav-wrapper.blue
-        a.brand-logo href="#"  KYC Registry
+        a.brand-logo href="/"  KYC Registry
         ul#nav-mobile.right.hide-on-med-and-down
     == yield
