--- a/html/kyc_form/new.slim
+++ b/html/kyc_form/new.slim
@@ -137,10 +137,10 @@ form#new_form method="post" action="/kyc-registry/new"
               .col.m2
                 |Citizenship*
               .col.m10
-                select name="coutry"
+                select name="country"
                   option disabled="" selected=""  value="" Select Country
                   -Country.all.each do |country|
-                    option value="#{country.code}" #{country.name}
+                    option value="#{country.id}" #{country.name}
 
             .row
               .col.m2
@@ -373,7 +373,7 @@ form#new_form method="post" action="/kyc-registry/new"
                           select name="address_coutry"
                             option disabled="" selected=""  value="" Select Country
                             -Country.all.each do |country|
-                              option value="#{country.code}" #{country.name}
+                              option value="#{country.id}" #{country.name}
                     .row
                       .col.m12
                         |(Certified copy of any one of the following Proof of Address [PoA] needs to be submitted)
@@ -503,7 +503,7 @@ form#new_form method="post" action="/kyc-registry/new"
                           select name="local_address_coutry"
                             option disabled="" selected=""  value="" Select Country
                             -Country.all.each do |country|
-                              option value="#{country.code}" #{country.name}
+                              option value="#{country.id}" #{country.name}
             .row
               .col.m12.right-align
                 /button.btn.wave-efects.blue next
@@ -549,7 +549,7 @@ form#new_form method="post" action="/kyc-registry/new"
                 select name="jurisdiction_country"
                   option disabled="" selected=""  value="" Select Country
                   -Country.all.each do |country|
-                    option value="#{country.code}" #{country.name}
+                    option value="#{country.id}" #{country.name}
             .row
               .col.m12
                 .input-field
@@ -566,7 +566,7 @@ form#new_form method="post" action="/kyc-registry/new"
                 select name="country_of_birth"
                   option disabled="" selected=""  value="" Select Country of Birth
                   -Country.all.each do |country|
-                    option value="#{country.code}" #{country.name}
+                    option value="#{country.id}" #{country.name}
             .row
               .col.m12
                 .input-field
@@ -606,7 +606,7 @@ form#new_form method="post" action="/kyc-registry/new"
                   select name="ftca_crs_address_coutry"
                     option disabled="" selected=""  value="" Select Country
                     -Country.all.each do |country|
-                      option value="#{country.code}" #{country.name}
+                      option value="#{country.id}" #{country.name}
               .col.m12
                 .file-field.input-field
                   .btn
